V1.1.0 updated script with added weighted rubric scoring